Adding some visualization

--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,15 @@
     font-size: 24px;
     font-weight: bold;
 }
+
+.underline {
+    text-decoration: underline;
+}
+
+.underline-row td {
+    text-decoration: underline;
+}
+
+.underline-column {
+    border-top: 1px solid black;
+}
