--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: inline-block;
     border-bottom: 2px solid black;
     padding-bottom: 5px;
@@ -8,7 +8,7 @@
     display: inline-block;
     font-size: 24px;
     font-weight: bold;
-}
+} */
 
 /* .underline {
     text-decoration: underline;
@@ -22,7 +22,15 @@
     border-top: 1px solid black;
 } */
 
-table {
+.table-container {
+    display: flex;
+}
+  
+.table-container table {
+    margin-right: 50px; /* Разстояние между таблиците */
+}
+
+#table-task {
     border-collapse: collapse;
 }
   
@@ -34,4 +42,74 @@ td {
 /* Промяна на границата между първия и втория ред */
 .border-between-rows {
     border-bottom: 3px solid black;
+}
+
+
+
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+#slider-container {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#scale-slider {
+    width: 200px;
+}
+
+#table-container {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
+}
+
+/* table {
+    border-collapse: collapse;
+    border: 1px solid black;
+} */
+
+/* td {
+    padding: 5px;
+    border: 1px solid black;
+    position: relative;
+} */
+
+.digit {
+    position: relative;
+}
+
+.digit::before {
+    content: attr(data-digit);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: opacity 0.2s;
+}
+
+.digit.marked::before {
+    opacity: 0;
+}
+
+.marked {
+    background-color: white;
+    color: white;
 }
